# coinfolio-server-http

./: .gitignore  Cargo.toml  Dockerfile
src/: Brokers.rs  Refresh.rs  RefreshData.rs  ServeHTTP.rs  Universal.rs  definitions.rs  main.rs  middlewares.rs
src/Universal/: mod.rs
src/Universal/binance/: mod.rs
src/Universal/bitfinex/: mod.rs
src/Universal/cryptopia/: mod.rs
src/Universal/hitbtc/: mod.rs
src/Universal/kraken/: mod.rs
src/Universal/kucoin/: mod.rs
src/arbitrage/: mod.rs
src/boot/: mod.rs
src/commissions/: mod.rs
src/debug/: mod.rs
src/dictionary/: mod.rs
src/fetch/: mod.rs
src/routes/: mod.rs
src/structures/: mod.rs
src/transactions/: mod.rs
src/types/: mod.rs
src/update/: mod.rs
src/write/: mod.rs
src/ws_server/: mod.rs
