[package]
name = "server-http"
version = "0.1.0"
authors = ["JB Dumont <jbmdumont@gmail.com>"]

[dependencies]
serde_json = "1.0"
serde_derive = "*"
serde = "*"
json = "*"
chrono = "0.4"
iron ="*"
time="*"
router="*"
persistent = "*"
reqwest="*"
job_scheduler="*"
hyper="*"
base64="*"
hmac = "0.5"
sha2 = "0.7"

[dependencies.ws]
version = "*"
features = ["ssl"]